jscss/style.css
body {
    background: url('../img/pattern1.gif');
    margin: 0px;
    padding: 0px;
    text-align: center;
}
#background {
    position: fixed;
    top:0;
    bottom: 0;
    width: 950px;
    left: 50%;
    margin-left: -475px;
    background: rgba(10,10,10,0.8);
}
#content-wrapper {
    position: relative;
    padding: 60px 25px;
    width: 900px;
    margin: 0px auto;
    text-align: left;
}
#dashboard {
    float: left;
    width: 300px;
}
#content-feed {
    float: right;
    width: 600px;
}
.brick {
    margin: 10px;
    padding: 10px;
    border-radius: 20px 7px;
    background: white;
}
#content-feed .brick {
    padding: 20px;
}
#searchBox {
    margin: 8px;
    padding: 10px;
    border-radius: 10px;
    float: right;
}
.clearer {
    clear: both;
}
.tweetsContainer {
    padding: 5px;
}
.tweet {
    border-bottom: 1px dashed black;
}
.user {
    font-weight: bold;
}
#tweetBox {
    width: 100%;
}
#ticker {
    display: none;
    position: absolute;
    top: 50%;
    left: 50%;
    padding: 10px;
    border-radius: 8px;
    background: yellow;
}
#logoutButton {
    float: right;
}
.sector.active {
    display: block;
}
.sector {
    display: none;
}
.timestamp {
    float: right;
}
.listing {
    overflow: hidden;
    padding: 15px;
}
.listing:nth-child(odd) {
    background: #f3f3f3;
}
.tweet:hover {
    background: #d3d3d3;
}
#popup {
    position: fixed;
    top: 50%;
    left: 50%;
    margin-top: -150px;
    margin-left: -250px;
    height: 300px;
    width: 500px;
    display: none;
    border: 10px solid rgba(82, 82, 82, 0.7);
    padding: 10px;
    border-radius: 8px;
}
#popupInner {
    background: white;
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    overflow-x: hidden;
    overflow-y: scroll;
}
#closeButtonPop {
    position: absolute;
    margin-top: -10px;
    margin-left: 440px;
    padding: 10px;
    z-index: 100;
}
.searchContainer {
    display: none;
}
.searchContainer.active {
    display: block;
}
.profileList {
    width: 860px;
    float: left;
}
.gravatar {
    margin-right: 15px;
    float: left;
}
.user a {
    font-size: 16px;
}

